--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -41,14 +41,134 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/intro.md",
+      "source_relative_path": "articles/00-00-intro.md",
       "output": {
         ".html": {
-          "relative_path": "articles/intro.html",
-          "hash": "4C8tHmaABx7DqS4xwKzMWXWQkdauy8q+CAmIXJzS+xo="
+          "relative_path": "articles/00-00-intro.html",
+          "hash": "19FpOdCZJNYnGIOuKwUnz3WYjZfc2UNL4eFTQMJjB4c="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/01-00-quickstart.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/01-00-quickstart.html",
+          "hash": "Wzxfu9OtwSGe0gxslQyI4cM/ILgpSRE6wZnTPqJon00="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/02-00-overview.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/02-00-overview.html",
+          "hash": "3liI3X0VsjXt6KfbLlRSQReZMvZnvt7748RDTil5Jdk="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/02-01-components.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/02-01-components.html",
+          "hash": "I2fO7uXA6PrAI67hB1mmatS9uklPHKIsZ2OGgk9Ry2E="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/02-02-events.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/02-02-events.html",
+          "hash": "OgM6x/FBrK5QZWxisS9VmOGDDuoQvEpMlQWBt8mjg4A="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/03-00-interactor.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/03-00-interactor.html",
+          "hash": "uTLFrU3TOAjDQJSYuILcTNAoHnH3MYocyZEt7xtgXG4="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/03-01-custom-interactor.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/03-01-custom-interactor.html",
+          "hash": "1rIx8SB9/rU1r4zMpzQ0RqUI2tDZfZP7JRyZfFuhdwM="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/03-02-raycast-simple.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/03-02-raycast-simple.html",
+          "hash": "E0HTBoUxLSSv8xAfVTSW3Rwsj9hq0SyL3i3YD0YEmnI="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/03-03-raycast-advanced.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/03-03-raycast-advanced.html",
+          "hash": "CmGnV6xcQCTScK6cCTqboIAkOFib5X+4VSky1+NUNpw="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/04-00-interactable.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/04-00-interactable.html",
+          "hash": "0IZAYhx+qPgMHYaDl+GJxtSFty5gK7VHwSUPm/+Y1Co="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/04-01-custom-interactable.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/04-01-custom-interactable.html",
+          "hash": "jigQhjkVswbHDe5S92+VkFU1egOAzjuluDQZrJrLVLE="
+        }
+      },
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -57,7 +177,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/toc.html",
-          "hash": "+FPCLcvmNhVb9VLasYr6Tnep0PZtIA6V/UOJ0u+1RmE="
+          "hash": "ROcmzH+eaocwJwlqJF4gHHXzh5AX09ccfzMk6pV4N1g="
         }
       },
       "is_incremental": false,
@@ -81,7 +201,7 @@
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "luhgnETDJIA5kfUoAQZocfGjmHQAicTuOezhjGMJg2c="
+          "hash": "8PntBEzDP80UKiTNh6LdnpAD8NMsi7dKk3GYL/VqPKU="
         }
       },
       "is_incremental": false,
@@ -100,8 +220,8 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
-          "total_file_count": 4,
-          "skipped_file_count": 4
+          "total_file_count": 14,
+          "skipped_file_count": 14
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
